# mlx-bigvgan

./: .gitignore  Compare.ipynb  README.md  pyproject.toml
src/mlx_bigvgan/: __init__.py  act.py  alias_free_activation.py  audio.py  bigvgan.py  convert.py  utils.py
test/: ampblock_test.py  bigvgan_test.py  downsample_test.py  mel_spectrogram_test.py  upsample_test.py
