[project]
name = "mlx-bigvgan"
version = "0.1.0"
description = "MLX implementation of BigVGAN"
readme = "README.md"
license = { text = "MIT" }
keywords = ["MLX", "BigVGAN"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
authors = [
    { name = "Yrom", email = "yrom@qq.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.22.1",
    "numpy",
    "matplotlib",
    "huggingface-hub",
    "torch>=2.2.0",
    "soundfile",
]

[project.optional-dependencies]
test = ["librosa","torchaudio"]
[project.scripts]
convert_mlx_bigvgan = "mlx_bigvgan.convert:main"