[project]
name = "mlx-bigvgan"
version = "0.1.0"
description = "MLX implementation of BigVGAN"
readme = "README.md"
license = { text = "MIT" }
keywords = ["MLX", "BigVGAN"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS"
]
authors = [
    { name = "Yrom", email = "yrom@qq.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.22.1",
    "numpy",
    "huggingface-hub",
    "soundfile",
]

[project.optional-dependencies]
test = ["librosa","torchaudio","torch", "matplotlib"]
[project.scripts]
convert_mlx_bigvgan = "mlx_bigvgan.convert:main"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "torch>=2.0.1",
    "torchaudio>=2.0.1",
    "librosa>=0.10.0",
    "matplotlib",
    "ruff>=0.11.6",
]
